# video-membership-site

./: .flake8  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  db.py  shortcuts.py  utils.py
app/index/: client.py  schemas.py
app/playlists/: models.py  routers.py  schemas.py
app/templates/: account.html  base.html  dashboard.html  home.html
app/templates/auth/: login.html  logout.html  signup.html
app/templates/errors/: 404.html  main.html
app/templates/playlists/: create.html  detail.html  list.html  sidebar.html
app/templates/playlists/htmx/: add-video.html
app/templates/search/: detail.html  search_form.html
app/templates/snippets/: form_errors.html  nav.html
app/templates/videos/: create.html  detail.html  edit.html  list.html  sidebar.html
app/templates/videos/htmx/: create.html  edit.html  list-inline.html
app/templates/videos/renderers/: youtube.html
app/users/: auth.py  backends.py  decorators.py  exceptions.py  models.py  schemas.py  security.py  validators.py
app/videos/: extractors.py  models.py  routers.py  schemas.py
app/watch_events/: models.py  routers.py  schemas.py
notebooks/: User.ipynb
tests/: test_users.py  test_video_membership_site.py
video_membership_site/: main.py
