[tool.poetry]
name = "app"
version = "0.1.0"
description = "A video membership platform"
authors = ["Sai-Santhan <dsaisanthan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
cassandra-driver = "^3.25.0"
python-dotenv = "^0.21.0"
email-validator = "^1.2.1"
argon2-cffi = "^21.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
algoliasearch = "^2.6.2"
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.3"
yapf = "^0.32.0"
flake8 = "^5.0.4"
devtools = "^0.9.0"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"